--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,406 @@
-// app global css in SCSS form
+@font-face {
+    font-family: "Devastation";
+    src: url("../fonts/Devastation.ttf") format("truetype"); /* IE9 Compat Modes */
+    font-family: "Retrock";
+    src: url("../fonts/Retrock.ttf") format("truetype"); /* IE9 Compat Modes */
+    font-family: "Education";
+    src: url("../fonts/Education.ttf") format("truetype"); /* IE9 Compat Modes */
+    font-family: "Nougat";
+    src: url("../fonts/Nougat.ttf") format("truetype"); /* IE9 Compat Modes */
+  }
+  * {
+    font-weight: 75;
+  }
+  
+  body {
+    position: relative;
+    min-height: 100vh;
+  }
+  .container {
+    padding-bottom: 5rem;
+  }
+  footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 3.5rem;
+  }
+  #menu a.active {
+    color: blue;
+  }
+  #wf_logo {
+    display: inline-block;
+    width: 5em;
+  }
+  /*a, a:hover{
+      color: inherit;
+      text-decoration: none;
+  }*/
+  .justifie {
+    text-align: justify;
+  }
+  #first_image {
+    height: 70vh;
+    width: 100vw;
+    background-image: url("../img/bg.jpeg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    /*background-attachment: fixed;*/
+    background-size: cover;
+    background-size: cover;
+    color: black;
+    border-bottom: 5px solid #bd9c77;
+  }
+  #titre {
+    text-decoration: none;
+    color: white;
+    font-size: 2em;
+  }
+  #titre:hover {
+    color: beige;
+    text-decoration: none;
+  }
+  
+  .homepage_test_format a {
+    text-decoration: underline;
+    color: #bd9c77;
+  }
+  .homepage_test_format a:hover {
+    color: #5e4e3b;
+  }
+  .homepage_test_format {
+    text-align: justify;
+    font-family: "Nougat";
+    font-size: 2em;
+    color: black;
+    background-color: white;
+  }
+  
+  #text_logo {
+    /*display: inline-block;*/
+    width: 400px;
+    vertical-align: top;
+    /*padding-left: 50px;*/
+    /*padding-top: 60px;
+      padding-bottom: 100px;*/
+  }
+  .card:hover {
+    border: 1px black solid;
+  }
+  
+  .subtitle_homepage h2 {
+    border-bottom: solid #bd9c77 5px;
+    text-align: justify;
+    font-family: "Nougat";
+    font-size: 5em;
+    color: black;
+    background-color: white;
+  }
+  
+  .add-button {
+    width: 100px;
+    height: 100px;
+    border: 3px solid #bd9c77;
+    border-radius: 10%;
+    padding: 0;
+    background-color: inherit;
+    margin-right: 10px; /* Space between button and images */
+  }
+  
+  .add-button svg {
+      margin: 19px;
+    width: 60%;
+    height: 60%;
+  }
+  
+  .add-button-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .image-container {
+    display: flex;
+    flex-wrap: wrap;
+    height: 120px;
+    margin-bottom: 40px; /* Space between images and button */
+  }
+  
+  .image {
+    width: 100%;
+    height: 100%;
+    border-radius: 10%;
+    transition: transform 0.2s; /* Add transition for hover effect */
+  }
+  
+  .image:hover {
+    transform: scale(1.5); /* Scale up image on hover */
+  }
+  
+  .remove-button {
+    width: 100%;
+    padding: 5px;
+    margin-top: 5px;
+  }
+  
+  .image-wrapper {
+    width: 100px;
+    height: 100px;
+    margin-bottom: 10px; /* Space between images */
+    margin-right: 10px; /* Space between images */
+  }
+  
+  /* Pagination */
+  .pagination-container {
+    display: flex;
+    justify-content: center; /* Center the pagination buttons */
+    flex-wrap: nowrap; /* Prevent buttons from wrapping to new line */
+    align-items: center;
+  }
+  
+  .pagination-button {
+    width: 40px;
+    height: 40px;
+    background-color: #fff;
+    color: #bd9c77;
+    border: none;
+    text-align: center;
+    margin: 0 10px; /* Space between buttons */
+    cursor: pointer;
+    transition: background-color 0.2s;
+    font-size: 20px;
+    border: 2px solid #bd9c77;
+    border-radius: 10%;
+  }
+  
+  .pagination-button.active {
+    background-color: #bd9c77;
+    color: white;
+  }
+  
+  .pagination-button:hover {
+    background-color: #bd9c77;
+    color: white;
+  }
+  
+  /* Article card */
+  
+  /* ----- Global ----- */
+  :root {
+    --beige: #bd9c77;
+    --gray: #5e4e3b;
+    --white: #fff;
+    --black: #000;
+    --light-gray: #f2f2f2;
+    --light-beige: #f9f7f4;
+  }
+  
+  .details-btn {
+    padding: 1.5em 3.1em;
+    border: none;
+    border-radius: 7px;
+    font-size: 0.8em;
+    font-weight: 700;
+    letter-spacing: 1.3px;
+    color: #fff;
+    background-color: var(--beige);
+    box-shadow: 2px 2px 25px -7px #5e4e3b;
+    cursor: pointer;
+  }
+  
+  .details:active {
+    transform: scale(0.97);
+  }
+  
+  /* ----- Card ----- */
+  .card-container {
+    flex-flow: column wrap;
+  }
+  
+  /* ----- Slider ----- */
+  /* .splide__slide.is-active {
+      border: none !important;
+      border-radius: 2% !important;	
+  }
+  .splide__slide.is-active img {
+    border: 3px solid #bd9c77 !important;
+    border-radius: 2% !important;	
+  } */
+  
+  .card {
+      border: 1px solid var(--beige) !important;
+  }
+  
+  .splide__slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .splide__slide {
+    opacity: 0.6;
+  }
+  
+  .splide__slide.is-active {
+    opacity: 1;
+  }
+  
+  .images-carousels {
+    margin: 0 auto;
+  }
+  
+  @media screen and (max-width: 768px) {
+    .images-carousels {
+      width: 90% !important;
+      margin-right: 20px !important;
+    }
+  
+    .article-component {
+      margin-left: 20px !important;
+    }
+  }
+  
+  .main-carousels {
+    margin-bottom: 1em;
+  }
+  
+  .page_title {
+    font-family: "Nougat";
+    font-size: 3em;
+    color: black;
+  }
+  
+  .no-result-alert h3 {
+    font-family: "Nougat";
+    font-size: 2em;
+  }
+  
+  .article-component {
+    margin-bottom: 20px;
+  }
+  
+  /* ----- Article sizes ----- */
+  .size-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .size-item {
+    background-color: #BD9C77;
+    border-radius: 10px;
+    color: #fff;
+    font-size: 14px;
+    font-weight: bold;
+    margin: 5px;
+    padding: 5px 12px;
+    text-align: center;
+  }
+  
+  .delete-color-button {
+    background: none;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    float: right;
+  }
+  
+  .delete-color-button svg {
+    width: 20px;
+    height: 20px;
+    margin-left: 10px;
+  }
+  
+  .dashboard {
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 2em;
+    justify-content: space-around;
+    align-items: center;
+  }
+  
+  .dashboard-btn {
+    padding: 2em 2em;
+    border: none;
+    border-radius: 7px;
+    cursor: pointer;
+    margin: 1em 1em;
+  }
+  
+  .dashboard .btn-coloris {
+    color: #31de31;
+    border: 3px solid #31de31;
+    text-decoration: none;
+  }
+  
+  .dashboard .btn-articles {
+    color: rgb(49, 179, 240);
+    border: 3px solid rgb(49, 179, 240);
+    text-decoration: none;
+  }
+  
+  .dashboard .btn-logout {
+    color: #fa0000d7;
+    border: 3px solid #fa0000d7;
+    text-decoration: none;
+  }
+  
+  .dashboard .btn-add-article {
+    color: #bd9c77;
+    border: 3px solid #bd9c77;
+    text-decoration: none;
+  }
+  
+// breakpoint variable, from https://quasar.dev/style/breakpoints
+// Except the xs one because I think 600px is too small
+$xs-breakpoint: 718px;
+$sm-breakpoint: 1024px;
+$md-breakpoint: 1439px;
+$lg-breakpoint: 1920px;
+
+.container,
+.container-sm,
+.container-md,
+.container-lg,
+.container-xl {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (min-width: $xs-breakpoint) {
+  .container,
+  .container-sm {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: $sm-breakpoint) {
+  .container,
+  .container-sm,
+  .container-md {
+    max-width: 920px;
+  }
+}
+
+@media (min-width: $md-breakpoint) {
+  .container,
+  .container-sm,
+  .container-md,
+  .container-lg {
+    max-width: 1140px;
+  }
+}
+
+@media (min-width: $lg-breakpoint) {
+  .container,
+  .container-sm,
+  .container-md,
+  .container-lg,
+  .container-xl {
+    max-width: 1440px;
+  }
+}
